--- a/config.env
+++ b/config.env
@@ -18,8 +18,12 @@ CUSTOM_CLANG_BRANCH=
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
 
 ## AOSP
-CLANG_BRANCH=master-kernel-build-2022
+# ---------------- FIX START ----------------
+# 原来的 master-kernel-build-2022 分支已失效
+# 改为 master 分支，该分支包含 r416183b 版本
+CLANG_BRANCH=master
 CLANG_VERSION=r416183b
+# ---------------- FIX END ------------------
 
 # GCC
 ENABLE_GCC_ARM64=true
@@ -34,17 +38,22 @@ CUSTOM_GCC_32_BRANCH=
 CUSTOM_GCC_32_BIN=arm-linux-androideabi-
 
 # KernelSU flags
-ENABLE_KERNELSU=ture
+# ---------------- TYPO FIX ----------------
+# 必须是 true，写成 ture 会导致 KSU 无法集成
+ENABLE_KERNELSU=true
 KERNELSU_TAG=v0.9.5
 KSU_EXPECTED_SIZE=
 KSU_EXPECTED_HASH=
 
 # Configuration
-DISABLE-LTO=ture
-DISABLE_CC_WERROR=ture
+# ---------------- TYPO FIX ----------------
+# 必须是 true，否则编译报错会停止，或者LTO导致编译极慢
+DISABLE-LTO=true
+DISABLE_CC_WERROR=true
 ADD_KPROBES_CONFIG=true
 ADD_OVERLAYFS_CONFIG=true
 REMOVE_UNUSED_PACKAGES=true
+# ------------------------------------------
 
 # AnyKernel3
 ## AnyKernel3 Custom
