--- a/config.env
+++ b/config.env
@@ -10,20 +10,21 @@ EXTRA_CMDS:LD=ld.lld
 
 # Clang
 ## Custom
-USE_CUSTOM_CLANG=false
-CUSTOM_CLANG_SOURCE=
-CUSTOM_CLANG_BRANCH=
+# ---------------- FIX START ----------------
+# 启用自定义 Clang，避开 Google Source 的下载错误
+USE_CUSTOM_CLANG=true
+# 使用 Proton Clang (Clang 13)，这是骁龙888内核的黄金搭档
+CUSTOM_CLANG_SOURCE=https://github.com/kdrag0n/proton-clang
+CUSTOM_CLANG_BRANCH=master
+# ---------------- FIX END ------------------
 
 ### if your set USE CUSTOM CLANG to false than DO NOT CHANGE CUSTOM CMDS
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
 
 ## AOSP
-# ---------------- FIX START ----------------
-# 原来的 master-kernel-build-2022 分支已失效
-# 改为 master 分支，该分支包含 r416183b 版本
+# 下面这两行在启用 CUSTOM_CLANG 后会被忽略，所以不用管了
 CLANG_BRANCH=master
 CLANG_VERSION=r416183b
-# ---------------- FIX END ------------------
 
 # GCC
 ENABLE_GCC_ARM64=true
@@ -38,8 +39,7 @@ CUSTOM_GCC_32_BRANCH=
 CUSTOM_GCC_32_BIN=arm-linux-androideabi-
 
 # KernelSU flags
-# ---------------- TYPO FIX ----------------
-# 必须是 true，写成 ture 会导致 KSU 无法集成
+# ---------------- TYPO FIX (请务必保留这些修正) ----------------
 ENABLE_KERNELSU=true
 KERNELSU_TAG=v0.9.5
 KSU_EXPECTED_SIZE=
@@ -47,7 +47,6 @@ KSU_EXPECTED_HASH=
 
 # Configuration
 # ---------------- TYPO FIX ----------------
-# 必须是 true，否则编译报错会停止，或者LTO导致编译极慢
 DISABLE-LTO=true
 DISABLE_CC_WERROR=true
 ADD_KPROBES_CONFIG=true
