--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 CONFIG_ENV=config.env
 
-KERNEL_SOURCE=https://github.com/ztemt/NX669J-kernel/tree/main/msm-5.4
+KERNEL_SOURCE=https://github.com/Tkpointz/NX669J_kernel
 KERNEL_SOURCE_BRANCH=main
 KERNEL_CONFIG=vendor/genericarmv8-64_defconfig
 KERNEL_IMAGE_NAME=Image.gz-dtb
