--- a/config.env
+++ b/config.env
@@ -9,22 +9,16 @@ ADD_LOCALVERSION_TO_FILENAME=false
 EXTRA_CMDS:LD=ld.lld
 
 # Clang
-## Custom
-# ---------------- FIX START ----------------
-# 启用自定义 Clang，避开 Google Source 的下载错误
-USE_CUSTOM_CLANG=true
-# 使用 Proton Clang (Clang 13)，这是骁龙888内核的黄金搭档
+USE_CUSTOM_CLANG=false
 CUSTOM_CLANG_SOURCE=https://github.com/kdrag0n/proton-clang
 CUSTOM_CLANG_BRANCH=master
-# ---------------- FIX END ------------------
 
 ### if your set USE CUSTOM CLANG to false than DO NOT CHANGE CUSTOM CMDS
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
 
 ## AOSP
-# 下面这两行在启用 CUSTOM_CLANG 后会被忽略，所以不用管了
 CLANG_BRANCH=master
-CLANG_VERSION=r416183b
+CLANG_VERSION=r383902b
 
 # GCC
 ENABLE_GCC_ARM64=true
@@ -39,20 +33,17 @@ CUSTOM_GCC_32_BRANCH=
 CUSTOM_GCC_32_BIN=arm-linux-androideabi-
 
 # KernelSU flags
-# ---------------- TYPO FIX (请务必保留这些修正) ----------------
 ENABLE_KERNELSU=true
 KERNELSU_TAG=v0.9.5
 KSU_EXPECTED_SIZE=
 KSU_EXPECTED_HASH=
 
 # Configuration
-# ---------------- TYPO FIX ----------------
 DISABLE-LTO=true
 DISABLE_CC_WERROR=true
 ADD_KPROBES_CONFIG=true
 ADD_OVERLAYFS_CONFIG=true
 REMOVE_UNUSED_PACKAGES=true
-# ------------------------------------------
 
 # AnyKernel3
 ## AnyKernel3 Custom
