--- a/config.env
+++ b/config.env
@@ -9,9 +9,9 @@ ADD_LOCALVERSION_TO_FILENAME=false
 EXTRA_CMDS:LD=ld.lld
 
 # Clang
-USE_CUSTOM_CLANG=false
-CUSTOM_CLANG_SOURCE=https://github.com/kdrag0n/proton-clang
-CUSTOM_CLANG_BRANCH=master
+USE_CUSTOM_CLANG=true
+CUSTOM_CLANG_SOURCE=https://github.com/AOSPMinimal/platform_prebuilts_clang_host_linux-x86_clang-r383902b
+CUSTOM_CLANG_BRANCH=aosp-12
 
 ### if your set USE CUSTOM CLANG to false than DO NOT CHANGE CUSTOM CMDS
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
